Improvements / Corrections (dark mode switch button layout position / Text centering)

--- a/style.css
+++ b/style.css
@@ -1044,7 +1044,7 @@ h2{
 }
 
 #bloc-1-hero h1{
-    color: #FFF;
+    color: #FFFFFF;
     font-size: 2.4em;
 }
 
@@ -1055,11 +1055,11 @@ h2{
 #bloc2_introduction{
     font-size: 1.6em;
     padding: 0 15%;
-    color: #000;
+    color: #000000;
 }
 
 .l-bloc p a{
-    color:black;
+    color: #000000;
 }
 
 #maxime{
@@ -1073,8 +1073,16 @@ blockquote footer{
 
 /*FORM LAYOUT ENHANCEMENT*/
 
+body .bgc-white{
+    background: white;
+}
+
 #bloc-0 img{
     margin-left: 0.5vh;
+}
+
+#bloc-0 .bloc-sm{
+    padding: 0;
 }
 
 .nav > li > a:focus{
@@ -1108,6 +1116,12 @@ blockquote footer{
     color: rgba(0, 0, 0, 1)
 }
 
+#bloc-2-services{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #bloc-3-what-i-do h2{
     background-color: rgba(104, 90, 60, .6);
     box-shadow: 5px 5px rgba(0,0,0,.2);
@@ -1120,7 +1134,7 @@ blockquote footer{
 }
 
 #bloc-3-what-i-do p a:focus{
-    border: 1px solid #000;
+    border: 1px solid #000000;
 }
 
 #bloc-4-portfolio p:nth-child(2){
@@ -1137,7 +1151,6 @@ blockquote footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .portfolio-row{
@@ -1189,7 +1202,7 @@ body.dark #bloc-7 .btn-atomic-tangerine{
 }
 
 .d-bloc a .icon-md{
-    color: #FFF;
+    color: #FFFFFF;
 }
 
 #bloc-8-index .container{
@@ -1221,6 +1234,10 @@ body.dark #bloc-7 .btn-atomic-tangerine{
 }
 
 /*LCA CONTACT PAGE*/
+
+#bloc-0-contact .bloc-sm{
+    padding: 0;
+}
 
 #form_1{
 
@@ -1306,8 +1323,7 @@ body.dark #bloc-7 .btn-atomic-tangerine{
     color: #000000;
     display:flex;
     justify-content: flex-end;
-    position: relative;
-    float: right;
+    padding: 0;
 }
 
 #switch h2{
@@ -1378,8 +1394,8 @@ input:checked +.slider::before{
 
 /*DARK MODE SETUP*/
 
-body .bgc-white{
-    background: white;
+body.dark main{
+    background: #121212;
 }
 
 body.dark .bgc-white{
@@ -1400,6 +1416,14 @@ body.dark .black-background{
     max-width: 800px;
     padding-left: 0;
     padding-right: 0;
+}
+
+body.dark #switch{
+    background: #121212;
+}
+
+body.dark #switch h2{
+    color: #FFFFFF;
 }
 
 body.dark #bloc-0-contact h2{
